--- a/index.html
+++ b/index.html
@@ -1,55 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Портфолио Софии Коченко</title>
-  <style>
-    /* Убираем все лишнее, чтобы экран не дергался */
-    body,
-    html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      background-color: #1a1a1a;
-    }
-
-    /* Контейнер на весь экран */
-    .pdf-viewer {
-      width: 100%;
-      height: 100dvh;
-      /* Используем динамическую высоту для мобилок */
-      border: none;
-      display: block;
-    }
-
-    /* Убираем стандартные отступы у мобильных браузеров */
-    @media (max-width: 768px) {
-      .pdf-viewer {
-        height: 100vh;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Портфолио Софии Коченко</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            background-color: #1a1a1a;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
-
 <body>
 
-  <embed src="portfolio.pdf#toolbar=0&navpanes=0&scrollbar=1" type="application/pdf" class="pdf-viewer" />
+    <iframe id="pdf-content" src=""></iframe>
 
-  <script>
-    // Небольшой фикс для Safari на iPhone
-    if (!navigator.userAgent.match(/SamsungBrowser|Chrome|FreeWheel/i) && navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
-      document.querySelector('embed').style.display = 'none';
-      var ifr = document.createElement('iframe');
-      ifr.src = "portfolio.pdf";
-      ifr.className = "pdf-viewer";
-      document.body.appendChild(ifr);
-    }
-  </script>
+    <script>
+        // Твоя прямая ссылка на файл на GitHub
+        const fileUrl = "https://horsinc.github.io/my-portfolio/portfolio.pdf";
+        const iframe = document.getElementById('pdf-content');
+
+        // Проверяем ширину экрана (меньше 768px — это мобильные)
+        if (window.innerWidth <= 768) {
+            // ДЛЯ ТЕЛЕФОНОВ: Открываем через Google Viewer (режим просмотра)
+            iframe.src = "https://docs.google.com/viewer?url=" + encodeURIComponent(fileUrl) + "&embedded=true";
+        } else {
+            // ДЛЯ КОМПЬЮТЕРОВ: Открываем файл напрямую (как и было)
+            iframe.src = "portfolio.pdf";
+        }
+    </script>
 
 </body>
-
 </html>
