--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         // Проверяем ширину экрана (меньше 768px — это мобильные)
         if (window.innerWidth <= 768) {
             // ДЛЯ ТЕЛЕФОНОВ: Открываем через Google Viewer (режим просмотра)
-            iframe.src = "https://docs.google.com/viewer?url=" + encodeURIComponent(fileUrl) + "&embedded=true";
+            iframe.src = "https://drive.google.com/file/d/1lOqlA6w_ns0AwPeGuBGWFOX-aYuEi1Xa/preview";
         } else {
             // ДЛЯ КОМПЬЮТЕРОВ: Открываем файл напрямую (как и было)
             iframe.src = "portfolio.pdf";
